[tool.poetry]
name = "whatsapp-flask-app"
version = "0.1.0"
description = "A Flask app for sending WhatsApp messages using APIs"
authors = ["Your Name <you@example.com>"]
license = "MIT"

Private api modified package tools and other 
[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
pywhatkit = "^5.0"            # WhatsApp messaging automation
selenium = "^4.0"             # For Web automation (WhatsApp Web)
twilio = "^7.0"               # For sending messages via Twilio API
termcolor = "^1.1"            # For colored terminal output
requests = "^2.25.1"         

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"  # For testing
black = "^23.0.0"  # For code formatting
isort = "^5.0.0"   # For import sorting

[tool.pyright]
# Pyright configuration for type checking
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# Ruff configuration for linting
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
