[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
pywhatkit = "^5.0"            # WhatsApp messaging automation
selenium = "^4.0"             # For Web automation (WhatsApp Web)
twilio = "^7.0"               # For sending messages via Twilio API
termcolor = "^1.1"            # For colored terminal output
requests = "^2.25.1"          # For handling HTTP requests 

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
