[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
selenium = "^4.0"             # For Web automation (WhatsApp Web)
twilio = "^7.0"               # For sending messages via Twilio API
termcolor = "^1.1"            # For colored terminal output
requests = "^2.25.1"          # For handling HTTP requests
webdriver_manager = "^4.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pandas = "^1.3.3"
flask-cors = "^4.0.0"
pyautogui = "^0.9.54"
pillow = "^10.0.1"
pyvirtualdisplay = "^3.0"
xvfbwrapper = "^0.2.9"
pywhatkit = "^5.4"
mouseinfo = "^0.1.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
